--- a/style.css
+++ b/style.css
@@ -21,9 +21,9 @@
     height: 120vh;
     justify-content: center;
     align-content: center;
-    background: linear-gradient(rgb(230, 100, 101), rgb(145, 152, 229));
+    
 }
-
+/* background: linear-gradient(rgb(230, 100, 101), rgb(145, 152, 229)); */
 .clock{
     width: 400px;
     height: 400px;
@@ -33,6 +33,8 @@
     position: fixed;
     left: calc(50% - 200px);
     top: calc(50% - 200px);
+    z-index: 3;
+    background: linear-gradient(rgb(230, 100, 101), rgb(145, 152, 229));
 }
 
 .clock .number{
@@ -40,6 +42,11 @@
     width: 100%;
     height: 100%;
     text-align: center;
+}
+
+.hour, .min, .sec, .dot{
+    opacity: 0;
+    animation: fadeIn 1s forwards 1s;
 }
 
 .hour{
@@ -51,7 +58,6 @@
     background-color: black;
     transform-origin: bottom;
     transform: translateX(-50%);
-    
 }
 
 .min{
@@ -77,13 +83,17 @@
 }
 
 .zerofucksgiven{
-    position: fixed;
-    left: calc(50% - 206px);
+    position: absolute;
+    left: calc(50% - 184px);
     top: 15%;
     font-size: 2rem;
     font-weight: bold;
     padding-top: 20px;
+    transform-origin: bottom center;
+    z-index: 3;
+    display: none;
 }
+
 .dot{
     position: absolute;
     top: calc(50% - 7px);
@@ -93,15 +103,35 @@
     border-radius: 50%;
     background-color: black;
 }
-/* img{
-    position: absolute;
-    top: calc(50% - 25px);
-    left: calc(50% - 25px);
-    width: 50px;
-    height: 50px;
-} */
 
 .endless{
-    height: 200vh;
+    height: 300vh;
     width: 100vw;
+    position: relative;
+}
+.endless .text{
+    transform: rotate(90deg);
+    z-index: 3;
+    position: absolute;
+    left: 0px;
+}
+
+@keyframes fadeIn {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+
+.textW{
+    position: fixed;
+    left: calc(50% - 233px);
+    top: calc(50% - 233px);
+    width: 466px;
+    height: 466px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 2rem;
 }
