--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 .main {
     display: grid;
     width: 100vw;
-    height: 120vh;
+    height: 100vh;
     justify-content: center;
     align-content: center;    
 }
@@ -34,16 +34,17 @@
     transform: translateX(-50%) translateY(-50%);
     z-index: 3;
     background: linear-gradient(rgb(230, 100, 101), rgb(145, 152, 229));
+    box-shadow: -1px 3px 13px 4px grey;
 }
 
-.clock .number{
+.number{
     position: absolute;
     width: 100%;
     height: 100%;
     text-align: center;
 }
 
-.hour, .min, .sec, .dot{
+.hour, .min, .sec, .dot, .number{
     opacity: 0;
     animation: fadeIn 1s forwards 1s;
 }
@@ -90,6 +91,15 @@
     z-index: 3;
     display: none;
 }
+.fucks{
+    position: absolute;
+    top: 15%;
+    font-size: 2rem;
+    font-weight: bold;
+    padding-top: 20px;
+    transform-origin: bottom center;
+    z-index: 3;
+}
 
 .dot{
     position: absolute;
@@ -133,6 +143,26 @@
     text-align: center;
     font-weight: bold;
     font-size: 2rem;
+    /* opacity: 0; */
+}
+.fuckitText{
+    position: fixed;
+    left: calc(50% - 233px);
+    top: calc(50% - 233px);
+    width: 466px;
+    height: 466px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 2rem;
+    opacity: 0;
+}
+#fucksVideo, #fuckVideo{
+    border-radius: 50%;
+    z-index: 5;
+    height: 400px;
+    width: 400px;
+    display: none;
+    background-color: black;
 }
 
 .mouse {
@@ -215,15 +245,29 @@ img.moveFinger{
     }
 }
 
+@keyframes spin360 {
+    0%{
+    }
+    100%{
+        opacity: 0;
+        transform: rotateZ('360deg');
+    }
+}
+
 @media only screen and (max-width: 800px) {
     .clock{
         width: 300px;
         height: 300px;
     }
-    .fuckit{
+    .fuckit, .fuckitText{
         left: calc(50% - 183px);
         top: calc(50% - 183px);
         width: 366px;
         height: 366px;
+    }
+
+    #fucksVideo, #fuckVideo{
+        width: 300px;
+        height: 300px;
     }
 }
